# WebFrontend

./: README.md
C++/: .gitignore  CMakeLists.txt
C++/images/: image.txt
C++/include/: TextImage.h
C++/src/: TextImage.cpp  webfrontend.cpp
Python/: CMakeLists.txt
Python/src/: webfrontend.cpp
